Fixed the FAQ invisibility bug

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -534,6 +534,8 @@ h3,
 
 .faq-inner-sec .accordion .accordion-item .accordion-body {
   padding: 20px 0 0;
+    visibility: visible;     
+
 }
 
 /**************************/
